@@ -1,3 +1,14 @@
+2003-08-05  Ion Badulescu  <ionut@moisil.badula.org>
+
+	* amd/map.c (get_first_exported_ap, get_next_exported_ap): new
+	functions that facilitate iterating through the list of
+	mountpoints
+
+	* amd/amfs_union.c (amfs_union_mounted): use get_first_exported_ap
+	and get_next_exported_ap
+
+	* conf/autofs/autofs_solaris_v2_v3.c (autofs_unmount_2_req): ditto
+
 2003-08-04  Erez Zadok  <ezk@ulkesh.dyn.optonline.net>
 
 	* configure.in: check if system stores mount tables in files
